# GeckoHome

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.py  database.py  docker-compose.yml  gecko_detect.py  logging_config.py  main.py  motion_debug.py  pyproject.toml  requirements.txt  setup.ps1  startup.ps1
.github/workflows/: ci.yml  deploy.yml
bot/: access.py  formatters.py  handlers.py  i18n.py  keyboards.py
docs/superpowers/plans/: 2026-04-02-timelapse.md
docs/superpowers/specs/: 2026-04-02-timelapse-design.md
routers/: admin.py  auth.py  debug.py  devices.py  schedules.py  stats.py
services/: camera.py  debug_log.py  highlights.py  motion.py  scheduler.py  timelapse.py  tunnel.py  tuya.py  yolo.py  zones.py
src/geckohome/: __init__.py  config.py  database.py  logging_config.py  paths.py
src/geckohome/bot/: access.py  formatters.py  handlers.py  i18n.py  keyboards.py  main.py
src/geckohome/bot/handlers/: __init__.py  _helpers.py  access.py  dispatch.py  feeding.py  lamps.py  media.py  motion.py  schedules.py
src/geckohome/database/: __init__.py  _core.py  alerts.py  feeding.py  gecko.py  lamps.py  motion.py  photos.py  schedules.py  schema.py  sensors.py  users.py
src/geckohome/services/: camera.py  debug_log.py  highlights.py  motion.py  scheduler.py  timelapse.py  tunnel.py  tuya.py  yolo.py  zones.py
src/geckohome/services/scheduler/: __init__.py  _core.py  backup.py  feeding.py  jobs.py  lamps.py  notify.py  sensors.py
src/geckohome/web/: app.py
src/geckohome/web/routers/: admin.py  auth.py  debug.py  devices.py  ingest.py  schedules.py  stats.py
static/: admin.css  admin.js
templates/: admin.html  debug.html  login.html  stats.html  stream.html  stream_detect.html
tests/: conftest.py  test_camera_watchdog.py  test_config.py  test_database.py  test_feeding.py  test_fresh_deploy.py  test_scheduler_logic.py  test_sensor_ingest.py  test_sensor_poll.py
