[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geckohome"
version = "0.1.0"
description = "Terrarium automation for a leopard gecko: FastAPI web UI + Telegram bot + local-LAN Tuya device control."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "artem", email = "artemsav93@gmail.com" }]

# Runtime dependencies, pinned to the versions verified in the production
# container (python:3.11-slim). torch/torchvision are installed from the CPU
# wheel index in the Dockerfile; the bare version spec here matches the +cpu
# local build per PEP 440.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.47.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.29",
    "itsdangerous==2.2.0",
    "apscheduler==3.11.2",
    "aiosqlite==0.22.1",
    "python-telegram-bot==22.7",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings>=2.5,<3",
    "httpx==0.28.1",
    "opencv-python-headless==4.13.0.92",
    "tinytuya==1.18.0",
    "bcrypt==5.0.0",
    "pillow==12.2.0",
    "numpy==2.4.4",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "ultralytics==8.4.53",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "freezegun>=1.5",
    "pre-commit>=3.8",
]

[project.scripts]
geckohome-web = "geckohome.web.app:run"
geckohome-bot = "geckohome.bot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/geckohome"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff — linter + formatter
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "gecko_detect.py",
    "motion_debug.py",
    "timelapse_debug.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # FastAPI uses function calls in argument defaults (Depends)
    "RUF001", # ambiguous unicode (Cyrillic strings are intentional)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["geckohome"]

# ─────────────────────────────────────────────────────────────────────────────
# Mypy — static type checking
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
warn_unreachable = true
show_error_codes = true
pretty = true
exclude = '(^|/)(gecko_detect|motion_debug|timelapse_debug)\.py$'

# Third-party libraries without bundled type stubs.
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "tinytuya.*",
    "ultralytics.*",
    "apscheduler.*",
    "numpy.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest + coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["src/geckohome"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
